objects/BRF_ENROLL__x.object
<CustomObject>
    <description>BRF_ENROLL</description>
    <externalDataSource>SAP_HANA</externalDataSource>
    <externalName>BRF_ENROLL</externalName>
    <fields>
        <fullName>ACTIVE_FLAG__c</fullName>
        <description>ACTIVE_FLAG</description>
        <externalDeveloperName>ACTIVE_FLAG</externalDeveloperName>
        <label>ACTIVE_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AEDAT__c</fullName>
        <description>AEDAT</description>
        <externalDeveloperName>AEDAT</externalDeveloperName>
        <label>AEDAT</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AENAM__c</fullName>
        <description>AENAM</description>
        <externalDeveloperName>AENAM</externalDeveloperName>
        <label>AENAM</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMMENTS__c</fullName>
        <description>COMMENTS</description>
        <externalDeveloperName>COMMENTS</externalDeveloperName>
        <label>COMMENTS</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTENROLL__c</fullName>
        <description>CUSTENROLL</description>
        <externalDeveloperName>CUSTENROLL</externalDeveloperName>
        <label>CUSTENROLL</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DISC_ELIGIBILITY__c</fullName>
        <description>DISC_ELIGIBILITY</description>
        <externalDeveloperName>DISC_ELIGIBILITY</externalDeveloperName>
        <label>DISC_ELIGIBILITY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENROLL1__c</fullName>
        <description>ENROLL1</description>
        <externalDeveloperName>ENROLL1</externalDeveloperName>
        <label>ENROLL1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENROLL_DATE__c</fullName>
        <description>ENROLL_DATE</description>
        <externalDeveloperName>ENROLL_DATE</externalDeveloperName>
        <label>ENROLL_DATE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERDAT__c</fullName>
        <description>ERDAT</description>
        <externalDeveloperName>ERDAT</externalDeveloperName>
        <label>ERDAT</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERNAM__c</fullName>
        <description>ERNAM</description>
        <externalDeveloperName>ERNAM</externalDeveloperName>
        <label>ERNAM</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KUNNR__c</fullName>
        <description>KUNNR</description>
        <externalDeveloperName>KUNNR</externalDeveloperName>
        <label>KUNNR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROG_CAT__c</fullName>
        <description>PROG_CAT</description>
        <externalDeveloperName>PROG_CAT</externalDeveloperName>
        <label>PROG_CAT</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROG_DESC__c</fullName>
        <description>PROG_DESC</description>
        <externalDeveloperName>PROG_DESC</externalDeveloperName>
        <label>PROG_DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROG_ID__c</fullName>
        <description>PROG_ID</description>
        <externalDeveloperName>PROG_ID</externalDeveloperName>
        <label>PROG_ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROG_NAME__c</fullName>
        <description>PROG_NAME</description>
        <externalDeveloperName>PROG_NAME</externalDeveloperName>
        <label>PROG_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TERM_DATE__c</fullName>
        <description>TERM_DATE</description>
        <externalDeveloperName>TERM_DATE</externalDeveloperName>
        <label>TERM_DATE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>BRF_ENROLL</label>
    <pluralLabel>BRF_ENROLL</pluralLabel>
</CustomObject>